--- a/main.tex
+++ b/main.tex
@@ -47,8 +47,8 @@
 \frontmatter
 
 \department{CIENCIA DE LA COMPUTACIÓN}
-\degree{BACHILLER }
-\major{CIENCIAS DE LA COMPUTACIÓN}
+\degree{bachiller }
+\major{Ciencia de la Computación}
 
 \title{UN ENFOQUE HÍBRIDO: GAIT-BASED PERSON RE-ID}
 
@@ -65,8 +65,8 @@
 
 \setstretch{1.5}
 
-\input{encabezados/dedicatoria}
-\input{encabezados/agradecimientos}
+% \input{encabezados/dedicatoria}
+% \input{encabezados/agradecimientos}
 
 \tableofcontents
 
