--- a/secciones/abstract.tex
+++ b/secciones/abstract.tex
@@ -13,7 +13,7 @@ This thesis investigates self-supervised learning as an alternative paradigm for
 
 The research comprises a systematic review of recent advances in self-supervised Person Re-ID, the development of an experimental framework on benchmark datasets, and an evaluation of model performance in terms of accuracy, robustness, and transferability. Moreover, it examines the open challenges and outlines future directions toward the design of scalable, efficient, and adaptable models. By doing so, this study contributes to positioning self-supervised learning as a promising and viable approach for intelligent monitoring systems. \\
 \end{comment}
-Gait recognition has become a relevant biometric modality for person re-identification, leveraging unique motion patterns that are independent of physical appearance. However, supervised approaches show a strong dependence on labeled data, while self-supervised learning (SSL) methods lack the precision required to distinguish between similar identities. This research proposes the development and evaluation of a hybrid model that combines the generalization capability of self-supervised learning with the accuracy of supervised learning, seeking a balance between both paradigms. The model is trained in two complementary phases—a self-supervised phase for pretraining and a supervised phase for fine-tuning—with the goal of improving robustness and reducing dependence on manual annotations. The expected results aim to demonstrate the feasibility of this approach for developing person re-identification systems that are more scalable, accurate, and applicable to real-world scenarios.
+Gait recognition has become a relevant biometric modality for person re-identification, leveraging unique motion patterns that are independent of physical appearance. However, supervised approaches show a strong dependence on labeled data, while self-supervised learning (SSL) methods lack the precision required to distinguish between similar identities. This research proposes the development and evaluation of a hybrid model that combines the generalization capability of self-supervised learning with the accuracy of supervised learning, seeking a balance between both paradigms. The model is trained in two complementary phases with the goal of improving robustness and reducing dependence on manual annotations. The expected results aim to demonstrate the feasibility of this approach for developing person re-identification systems that are more scalable, accurate, and applicable to real-world scenarios.
 
 \noindent \textbf{Keywords:} \\
 Person re-identification; Gait recognition; Self-supervised learning; Supervised learning; Hybrid model.
