--- a/secciones/capitulo1.tex
+++ b/secciones/capitulo1.tex
@@ -2,15 +2,25 @@
 
 \section{Presentación del tema de investigación}
 
+\begin{comment}
 La re-identificación de personas (\textit{Person Re-ID}) es una tarea fundamental en el campo de la visión por computadora, cuyo objetivo es reconocer a un mismo individuo en diferentes cámaras o momentos. Entre las distintas modalidades biométricas, el reconocimiento de marcha (\textit{Gait Recognition}) destaca por utilizar la forma de caminar como rasgo distintivo, lo que lo hace menos sensible a cambios de vestimenta, pose o iluminación que los enfoques basados en la apariencia \citep{Purish2023GaitRecognition}.
 
 Para entrenar estos sistemas, existen dos estrategias principales. La primera es el aprendizaje supervisado (\textit{supervised learning}), que depende de grandes volúmenes de datos etiquetados para alcanzar una alta precisión. La segunda es el aprendizaje autosupervisado (\textit{Self-Supervised Learning, SSL}), una alternativa reciente que permite aprender representaciones útiles a partir de videos sin etiquetas manuales, como lo demuestran trabajos de referencia \citep{Zheng2022GaitLU1M, Wang2025GaitForeMer}. Este paradigma ha demostrado ser especialmente valioso para aprovechar datos no estructurados y reducir la dependencia del etiquetado manual.
+\end{comment}
+
+La re-identificación de personas (\textit{Person Re-ID}) se posiciona entre una tarea en el campo de visión por computadora y las necesidades operativas de vigilancia, análisis forense y sistemas inteligentes. El objetivo no es sólo identificar personas sino mantener una asociación fiable de identidades a través de múltiples cámaras, condiciones de iluminación y lapsos temporales. Estos retos nos presentan problemas prácticos como las oclusiones parciales, cambios de pose y la gran variabilidad de apariencia en las personas. En consecuencia, la re-identificación de personas se convierte en una tarea donde la robustez de las representaciones y la capacidad del modelo para generalizar escenarios son tan importantes como su precisión nominal. Por tal, es común que se busquen mejoras arquitectónicas como entrategias de entrenamiento y normalización de dominios, buscando aumentar la precisión bajo condiciones reales.
+
+Dentro de las modalidades biométricas que trabajan bajo la re-identificación de personas, el reconocimiento de marcha (\textit{Gait Recognition}) aparece como un rasgo complementario con ventajas prácticas claves, ya que la marcha puede extraerse a distancia, funciona cuando la cara no es visible y suele ser relativamente estable ante cambios de la vestimenta, escencial en escenarios de larga distancia o con cámaras con baja resolución \citep{Purish2023GaitRecognition}. Sin embargo, trabajar bajo el reconocimiento de marcha exige capturar información temporal y estructural, como la dinámica corporal, secuencia de siluetas y patrones cíclicos; además de lidiar con variaciones por ángulo de visión, velocidad de desplazamiento, fondos complejos y ruido en la segmentación de siluetas. En consecuencia, el reconocimiento de marcha nos permite diseñar representaciones que conserven la información temporal relevante y escalable en grandes escenarios. 
+
+En este contexto, el aprendizaje supervisado es la vía más directa para alcanzar una alta precisión en tareas de re-identificación; las redes profundas entrenadas con pares o tripletas, pérdida de clasificación y conjuntos etiquetadas permiten optimizar directamente la discriminación. No obstante, este paradigma presenta limitaciones prácticas como la necesidad de anotaciones y su recolección, y la tendencia al sobreajuste a condiciones que no representan todas las variables del mundo real. Además, los modelos supervisados suelen perder eficacia cuando se despliegan en nuevos entornos. Esto evidencia estrategias que reduzcan la dependencia del etiquetado exhaustivo y mejore la transferencia entre dominios.
+
+Frente a dichas limitaciones, el aprendizaje autosupervisado (\textit{Self Supervised Learning - SSL}) ofrece explorar grandes colecciones sin etiquetas, aprendiendo invaricancias útiles mediante \textit{pretext-tasks}. El reconocimiento de marcha puede utilizar características espacio-temporales que codifican la dinámica de marcha y robustez frente a diferentes vistas. Aquí es donde los temas convergen, un enfoque híbrido que combine el pre-entrenamiento autosupervisado sobre grandes volúmenes y posteriormente realizar un ajuste supervisado sobre conjuntos anotados, mejorando al generalización entre cámaras y recuperación de discriminantes finos necesarios para la re-identificación.
 
 \section{Descripción de la situación problemática}
 
-A pesar de sus avances, el \textit{Gait Recognition} enfrenta un desafío central relacionado con las limitaciones de ambas estrategias de aprendizaje. Los métodos supervisados ofrecen una alta precisión, pero su escalabilidad se ve comprometida por la necesidad de datos etiquetados en contextos reales, donde las variaciones visuales son casi infinitas. En contraste, el aprendizaje autosupervisado permite una mayor generalización y adaptabilidad, pero carece de una guía explícita que ayude al modelo a distinguir detalles sutiles entre individuos con patrones de caminata similares.
+A pesar de sus avances, \textit{Gait Recognition} aún enfrenta un desafíos relacionado con las limitaciones de ambas estrategias de aprendizaje. Los métodos supervisados ofrecen una alta precisión, pero su escalabilidad se ve comprometida por la necesidad de datos etiquetados en contextos reales, donde las variaciones visuales son casi infinitas. En contraste, el aprendizaje autosupervisado permite una mayor generalización y adaptabilidad, pero carece de una guía explícita que ayude al modelo a distinguir detalles sutiles entre individuos con patrones de caminata similares.
 
-Para abordar estas deficiencias, investigaciones recientes han explorado modelos híbridos y arquitecturas más complejas. Por ejemplo, el trabajo de \citet{Kovacevic2021SelfAttentionGait} introduce mecanismos de auto-atención que mejoran la capacidad del modelo para concentrarse en las regiones más relevantes del movimiento. No obstante, incluso estos enfoques avanzados no logran resolver completamente el problema, ya que siguen careciendo de un componente supervisado que refine la discriminación entre identidades.
+Para abordar estas deficiencias, investigaciones recientes han explorado modelos híbridos y arquitecturas más complejas. Por ejemplo, \citet{Kovacevic2021SelfAttentionGait} introduce mecanismos de auto-atención que mejoran la capacidad del modelo para concentrarse en las regiones más relevantes del movimiento. No obstante, incluso estos enfoques avanzados no logran resolver completamente el problema, ya que siguen careciendo de un componente supervisado que refine la discriminación entre identidades.
 
 En este contexto, el problema que esta tesis aborda radica en la necesidad de un marco de trabajo que combine de manera efectiva la capacidad de generalización del aprendizaje autosupervisado con la precisión del aprendizaje supervisado. Más que una simple combinación, se busca explorar una integración sinérgica entre ambos paradigmas, aprovechando la robustez de los modelos basados en atención y la guía estructurada del aprendizaje supervisado para mejorar la fiabilidad y adaptabilidad del reconocimiento de marcha en escenarios reales.
 
