--- a/secciones/resumen.tex
+++ b/secciones/resumen.tex
@@ -8,7 +8,7 @@ La presente tesis investiga el aprendizaje autosupervisado como paradigma altern
 La investigación comprende una revisión sistemática de los avances recientes en Person Re-ID autosupervisado, el desarrollo de un marco experimental sobre datasets de referencia y una evaluación del desempeño de los modelos en términos de precisión, robustez y transferibilidad. Asimismo, se examinan los desafíos abiertos y se plantean direcciones futuras orientadas al diseño de modelos escalables, eficientes y adaptables. De este modo, este estudio contribuye a posicionar el aprendizaje autosupervisado como una alternativa prometedora y viable para los sistemas de monitoreo inteligente. \\
 \end{comment}
 
-El reconocimiento de marcha (\textit{Gait Recognition}) se ha consolidado como una modalidad biométrica relevante para la reidentificación de personas, al aprovechar patrones de movimiento únicos e independientes de la apariencia física. Sin embargo, los enfoques supervisados presentan una fuerte dependencia de datos etiquetados, mientras que los métodos auto-supervisados (\textit{Self-Supervised Learning}, SSL) carecen de la precisión necesaria para distinguir identidades similares. Esta investigación propone el desarrollo y evaluación de un modelo híbrido que combine la capacidad de generalización del aprendizaje auto-supervisado con la precisión del aprendizaje supervisado, buscando un equilibrio entre ambos paradigmas. El modelo se entrena en dos fases complementarias —una auto-supervisada para el preentrenamiento y otra supervisada para el ajuste fino— con el objetivo de mejorar la robustez y reducir la dependencia de anotaciones manuales. Los resultados esperados apuntan a demostrar la viabilidad de este enfoque para desarrollar sistemas de reidentificación de personas más escalables, precisos y aplicables a escenarios del mundo real.
+El reconocimiento de marcha (\textit{Gait Recognition}) se ha consolidado como una modalidad biométrica relevante para la reidentificación de personas, al aprovechar patrones de movimiento únicos e independientes de la apariencia física. Sin embargo, los enfoques supervisados presentan una fuerte dependencia de datos etiquetados, mientras que los métodos auto-supervisados (\textit{Self-Supervised Learning}, SSL) carecen de la precisión necesaria para distinguir identidades similares. Esta investigación propone el desarrollo y evaluación de un modelo híbrido que combine la capacidad de generalización del aprendizaje auto-supervisado con la precisión del aprendizaje supervisado, buscando un equilibrio entre ambos paradigmas. El modelo se entrena en dos fases complementarias con el objetivo de mejorar la robustez y reducir la dependencia de anotaciones manuales. Los resultados esperados apuntan a demostrar la viabilidad de este enfoque para desarrollar sistemas de reidentificación de personas más escalables, precisos y aplicables a escenarios del mundo real.
 
 
 \noindent \textbf{Palabras clave:} \\
