--- a/main.tex
+++ b/main.tex
@@ -91,8 +91,9 @@
 \input{secciones/capitulo3}
 % \input{secciones/capitulo4}
 \input{secciones/capitulo5.tex}
-% \input{secciones/conclusiones}
-% \input{secciones/recomendaciones} % sección opcional
+\input{secciones/capitulo6.tex}
+\input{secciones/conclusiones}
+\input{secciones/recomendaciones} % sección opcional
 
 %% ============================================================================
 \renewcommand{\bibname}{\hfill\Large\bf{REFERENCIAS BIBLIOGRÁFICAS}\hfill}
