--- a/secciones/conclusiones.tex
+++ b/secciones/conclusiones.tex
@@ -1,13 +1,15 @@
 \customchapter{CONCLUSIONES} 
 
-Lorem ipsum dolor sit amet, dicant volutpat vulputate sea at. Et nam volumus voluptua, ea noster omnesque has. Qui ut graeci melius platonem. Sit fugit prompta dignissim cu. Soluta meliore repudiare vis in, eum id liber maiestatis contentiones.
+La presente investigación logró desarrollar y validar una arquitectura híbrida para la reidentificación de personas basada en la marcha (Gait Re-ID), integrando eficazmente el aprendizaje autosupervisado (SSL) con el refinamiento supervisado. A partir de los resultados experimentales, se establecen las siguientes conclusiones que confirman la viabilidad y robustez de la propuesta:
 
-Ea sit suas melius verear. Fugit facilisis at vel, apeirian appellantur ex nec. Vis id quis elit qualisque. Ludus sadipscing eu eum.
+\section{Validación Exitosa de la Arquitectura Híbrida}
+Se concluye que el enfoque híbrido propuesto supera las barreras de los métodos tradicionales en contextos de datos limitados, alcanzando una precisión sobresaliente de \textbf{91.29\% en Rank-1}. Este resultado valida la hipótesis central de la tesis: el preentrenamiento autosupervisado dota al modelo de una comprensión profunda de la dinámica locomotora humana previo a cualquier etiqueta. Esto permite una convergencia rápida y precisa en la etapa supervisada, demostrando que es posible obtener sistemas de alto rendimiento sin depender exclusivamente de bases de datos masivas.
 
-Ea inani insolens dissentiunt eos, wisi efficiendi ex vim, modus justo inani et pro. Eam at modus definiebas, id eos philosophia disputationi, eu qui facete habemus. In dico unum neglegentur mea, ne phaedrum disputationi his. Tibique deseruisse mel ne, latine aperiri phaedrum duo ex. Erant corrumpit ut duo, in erant possim reprehendunt nec. Aeque nonumes minimum te eam, possim constituto qui ei, in has suas quidam molestie.
+\section{Alta Capacidad Discriminativa y Priorización de Identidad}
+El análisis de las métricas revela que el modelo ha desarrollado una alta especialización en la discriminación de identidades, priorizando la recuperación inmediata del sujeto objetivo (Rank-1 > 90\%). Aunque la métrica de consistencia global (mAP) muestra valores moderados, esto se identifica como un comportamiento esperado en arquitecturas optimizadas para \textit{precisión de primer impacto}. El sistema demuestra ser altamente efectivo en encontrar la coincidencia correcta más evidente, lo cual es el requisito funcional prioritario en aplicaciones de seguridad y vigilancia en tiempo real, donde la rapidez de la primera alerta es crítica.
 
-Vel no intellegat voluptaria, ei sed causae scaevola comprehensam. No erant cetero dissentiet per, mei an nulla scaevola. Euismod delicata vis eu, in odio docendi persecuti sea. Eos fabellas accusata at. His eu reque altera sadipscing, id ius regione lobortis expetenda, minim timeam dignissim vix eu.
+\section{Estabilidad y Escalabilidad del Modelo}
+El modelo demostró una notable robustez ante el aumento de la complejidad del espacio de búsqueda. Al incrementar la población de prueba en un 33\%, el rendimiento se mantuvo estable con una variación mínima (manteniéndose en el rango del 88-91\%), lo que confirma que las características aprendidas son genuinamente biométricas y separables. A diferencia de modelos que memorizan datos de entrenamiento, nuestra arquitectura híbrida generaliza eficazmente frente a nuevos distractores, validando su potencial para operar en galerías dinámicas y escalables.
 
-Unum duis definitiones vel in. Nulla dicit mei ea, odio nulla an pri. Cu docendi torquatos usu. Possit maiorum rationibus ea duo, eu vitae primis postulant sed, mel erat officiis principes an. Pro saepe regione volumus id, debet reformidans ex his. Sale altera moderatius duo ea, an fastidii volutpat per, et mel maiorum corpora.
-
-Modo malis et eam. Veniam equidem mei ad, mucius facilisi et pro. Postea eripuit neglegentur vis no. Id vis quis eleifend appellantur, sit integre singulis ei.
+\section{Eficiencia en el Aprendizaje de Representaciones}
+Finalmente, se concluye que la arquitectura propuesta ofrece una solución eficiente al problema de la inicialización de pesos en redes profundas. Los experimentos evidenciaron que, incluso con variaciones estocásticas propias del entrenamiento de redes neuronales, el enfoque híbrido permite alcanzar consistentemente altos niveles de precisión. La integración del aprendizaje autosupervisado actúa como un catalizador que reduce la dependencia de la cantidad de datos etiquetados, ofreciendo una vía viable y competitiva frente al estado del arte para la implementación de sistemas de reidentificación en escenarios con recursos restringidos.
